--- a/monorepo/package.json
+++ b/monorepo/package.json
@@ -19,6 +19,7 @@
     "@cobyte-ui/theme-chalk": "workspace:^",
     "@cobyte-ui/tokens": "workspace:^",
     "@cobyte-ui/utils": "workspace:^",
+    "@element-plus/icons-vue": "^2.1.0",
     "@vue/shared": "^3.2.47",
     "@vueuse/core": "^9.5.0"
   },
